--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 	<title>Home | MediExcel Health Plan</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
 	<link rel="stylesheet" href="css/local.css">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
+
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -22,7 +27,12 @@
 		<div class="container">
 			<div class="navbar-header">
 				<!-- mobile nav toggle -->
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav"></button>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
 				<a href="/" class="navbar-brand">MediExcel Health Plan</a>
 			</div><!-- end .navbar-header -->
 
@@ -45,25 +55,113 @@
 		</div>
 	</header>
 
-	<!-- services -->
-
-	<!-- testimonials -->
-
-	<!-- loctions -->
-
-	<!-- mediexcel difference -->
-
-	<!-- footer -->
-	<footer>
+	<section id="services" class="grey-bg">
 		<div class="container">
+			<h2>
+				Services
+				<small>Lorem ipsum dolor sit amet.</small>
+			</h2>
+
 			<div class="row">
-				<div class="col-md-4">Copyright &copy;2015 MediExcel</div>
-				<div class="col-md-4"><!-- social --></div>
-				<div class="col-md-4">
-					<a href="#">Privacy Policy</a>
-					<a href="#">Terms of Use</a>
+				<div class="col-sm-4">
+					<span class="fa-stack fa-4x">
+						<i class="fa fa-circle fa-stack-2x primary"></i>
+						<i class="fa fa-heartbeat fa-stack-1x fa-inverse"></i>
+					</span>
+					<h4>Service</h4>
+					<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				</div>
+				<div class="col-sm-4">
+					<span class="fa-stack fa-4x">
+						<i class="fa fa-circle fa-stack-2x primary"></i>
+						<i class="fa fa-stethoscope fa-stack-1x fa-inverse"></i>
+					</span>
+					<h4>Service</h4>
+					<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				</div>
+				<div class="col-sm-4">
+					<span class="fa-stack fa-4x">
+						<i class="fa fa-circle fa-stack-2x primary"></i>
+						<i class="fa fa-hospital-o fa-stack-1x fa-inverse"></i>
+					</span>
+					<h4>Service</h4>
+					<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+				</div>
+			</div><!-- end .row -->
+		</div>
+	</section>
+
+	<section id="testimonials">
+		<div class="container">
+			<h2>
+				Testimonials
+				<small>What members are saying.</small>
+			</h2>
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<blockquote>
+						<p>You feel the difference the minute coming into MediExcel. They treat you in a more humane way.</p>
+						<footer>Oscar O.</footer>
+					</blockquote>
 				</div>
 			</div>
+		</div>
+	</section>
+
+	<section id="location" class="light-primary-bg">
+		<div class="container">
+			<h2>
+				Location
+				<small>Lorem ipsum dolor sit amet.</small>
+			</h2>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-2">
+					<h4>Excel Medical Center</h4>
+					<address>2507 Paseo de los Heroes<br>
+					Zona Río, Tijuana, Baja California</address>
+				</div>
+				<div class="col-md-6">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1682.0938222424863!2d-117.01171900000003!3d32.52113500000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d94808a09967c1%3A0x30420d6b3221f1aa!2sCentro+M%C3%A9dico+Excel!5e0!3m2!1sen!2s!4v1424384082848" frameborder="0"></iframe>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="updates" class="grey-bg">
+		<div class="container">
+			<h2>Updates</h2>
+			<div class="row">
+				<div class="col-md-4"></div>
+				<div class="col-md-4"></div>
+				<div class="col-md-4"></div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+	
+					Copyright &copy;2015 MediExcel
+	
+				</div><!-- end col-sm-4 -->
+				<div class="col-sm-4">
+	
+					<!-- social -->
+	
+				</div><!-- end col-sm-4 -->
+				<div class="col-sm-4">
+
+					<ul class="list-inline">
+
+						<li><a href="#">Privacy Policy</a></li>
+						<li><a href="#">Terms of Use</a></li>
+
+					</ul>
+
+				</div><!-- end .col-sm-4 -->
+			</div><!-- end .row -->
 		</div>
 	</footer>
 
