--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 	<link rel="stylesheet" href="css/local.css">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css">
 
 
 	<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
+
+	<!-- google maps // TODO 20-feb-2015: continue this when working remotely
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9HxO6ToXNZS3YN2Uc6ex_SIt2MKKm_zM"></script>
+	<script type="text/javascript">
+	  function initialize() {
+	    var mapOptions = {
+	      center: { lat: -34.397, lng: 150.644},
+	      zoom: 8
+	    };
+	    var map = new google.maps.Map(document.getElementById('map'),
+	        mapOptions);
+	  }
+	  google.maps.event.addDomListener(window, 'load', initialize);
+	</script>-->
 </head>
 <body id="page-top">
 
@@ -49,9 +63,15 @@
 		</div>
 	</nav>
 
-	<header>
+	<header class="main">
 		<div class="container">
-			<!-- here goes the CTA and "slider" image -->
+			<div class="row">
+				<div class="col-md-10 col-md-offset-1">
+					<h2>Cross-Border Health Care</h2>
+					<h3>at its Finest</h3>
+					<a href="#" class="btn btn-default primary-bg">Learn More</a>
+				</div>
+			</div>
 		</div>
 	</header>
 
@@ -121,7 +141,8 @@
 					Zona Río, Tijuana, Baja California</address>
 				</div>
 				<div class="col-md-6">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1682.0938222424863!2d-117.01171900000003!3d32.52113500000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d94808a09967c1%3A0x30420d6b3221f1aa!2sCentro+M%C3%A9dico+Excel!5e0!3m2!1sen!2s!4v1424384082848" frameborder="0"></iframe>
+					<!-- <div id="map"></div> -->
+					<iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Excel%20Medical%20Center%2C%20Paseo%20de%20los%20Heroes%2C%20Zona%20Urbana%20R%C3%ADo%20Tijuana%2C%20Tijuana%2C%20Mexico&key=AIzaSyD9HxO6ToXNZS3YN2Uc6ex_SIt2MKKm_zM"></iframe>
 				</div>
 			</div>
 		</div>
@@ -165,8 +186,33 @@
 		</div>
 	</footer>
 
+	<a href="#page-top" class="scroll-top">
+		<span class="fa-stack fa-2x">
+			<i class="fa fa-square fa-stack-2x primary"></i>
+			<i class="fa fa-arrow-up fa-stack-lg fa-inverse"></i>
+		</span>
+	</a>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+	<script>
+		// calls easing for the .page-top button
+		$(function() {
+			$('a.scroll-top').bind('click', function(e) {
+				e.preventDefault();
+
+				var anchor = $(this);
+
+				$('html, body').stop().animate({
+					
+					scrollTop: $(anchor.attr('href')).offset().top
+				
+				}, 1500, 'easeOutExpo');
+			});
+		});
+	</script>
 </body>
 </html>
