--- a/index.html
+++ b/index.html
@@ -157,19 +157,12 @@
 						Zona Río, Tijuana, Baja California<br>
 						C.P. 22010
 					</address>
-					<!--address>
+					<address>
 						<h5>Health Center Mexicali</h5>
 						<h4>Pro-Med Medical Group</h4>
 						Calle B # 210<br>
 						Colonia Nueva, Mexicali, Baja California<br>
 						C.P. 21100
-					</address-->
-					<address>
-						<h5>Business Office</h5>
-						750 Medical Center Ct. Suite 2<br>
-						Chula Vista, CA 91911<br>
-						<a href="mailto:info@mediexcel.com">info@mediexcel.com</a><br>
-						<abbr title="Phone">P:</abbr> (619) 421-1659
 					</address>
 					<button class="btn btn-main">View business hours &nbsp; <span class="glyphicon glyphicon-chevron-right"></span></button>
 				</div>
@@ -181,13 +174,31 @@
 		</div>
 	</section>
 
-	<section id="updates" class="grey-bg">
+	<section id="links" class="grey-bg">
 		<div class="container">
-			<h2>Updates</h2>
 			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-4"></div>
-				<div class="col-md-4"></div>
+				<div class="col-md-3">
+					<h4>Quick Links</h4>
+					<ul>
+						<li><a href="http://www.dmhc.ca.gov/" target="_blank">California Department of Managed Health Care</a></li>
+						<li><a href="http://www.insurance.ca.gov/" target="_blank">California Department of Insurance</a></li>
+						<li><a href="#">Online Grievance Form</a></li>
+					</ul>
+				</div>
+				<div class="col-md-6">
+					<h4>About MediExcel</h4>
+					<p>MediExcel Health Plan is a Knox-Keene licensed cross-border HMO. We offer healthcare coverage to employers in San Diego County and Imperial County with healthcare delivery networks in Tijuana and Mexicali.</p>
+				</div>
+				<div class="col-md-3">
+					<h4>Get in Touch</h4>
+					<address>
+						<h5>Business Office</h5>
+						750 Medical Center Ct. Suite 2<br>
+						Chula Vista, CA 91911<br>
+						<a href="mailto:info@mediexcel.com">info@mediexcel.com</a><br>
+						<abbr title="Phone">P:</abbr> (619) 421-1659
+					</address>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -202,19 +213,19 @@
 				</div><!-- end col-sm-4 -->
 				<div class="col-sm-4 text-center">
 					<div class="social">
-						<a href="#">
+						<a href="https://www.facebook.com/pages/Mediexcel-Health-Plan/420241224674592">
 							<span class="fa-stack fa-2x">
 								<i class="fa fa-circle fa-stack-2x main"></i>
 								<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
 							</span>
 						</a>
-						<a href="#">
+						<a href="https://twitter.com/MediExcelHealth" target="_blank">
 							<span class="fa-stack fa-2x">
 								<i class="fa fa-circle fa-stack-2x main"></i>
 								<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 							</span>
 						</a>
-						<a href="#">
+						<a href="https://www.linkedin.com/company/mediexcel-healthplan" target="_blank">
 							<span class="fa-stack fa-2x">
 								<i class="fa fa-circle fa-stack-2x main"></i>
 								<i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
