changed color to blue

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 				</div-->
 		</div><!-- end .carousel-inner -->
 	</header>
-
+	
+	<section id="headline" class="light-main-bg">
+		<div class="container">
+			<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum eget nunc semper ultrices. &nbsp; <a class="btn btn-main">Learn More &nbsp; <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+		</div>
+	</section>
 	<section id="services" class="grey-bg">
 		<div class="container">
 			<h2>
@@ -169,6 +174,24 @@
 				<div class="col-md-6">
 					<!-- <div id="map"></div> -->
 					<iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Excel%20Medical%20Center%2C%20Paseo%20de%20los%20Heroes%2C%20Zona%20Urbana%20R%C3%ADo%20Tijuana%2C%20Tijuana%2C%20Mexico&key=AIzaSyD9HxO6ToXNZS3YN2Uc6ex_SIt2MKKm_zM"></iframe>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="video">
+		<div class="container">
+			<h2>
+				Video Tour
+				<small>Lorem ipsum dolor sit amet.</small>
+			</h2>
+			<div class="row">
+				<div class="col-md-6">
+					<iframe src="http://player.vimeo.com/video/89938000?color=1468A8&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				</div>
+				<div class="col-md-6">
+					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dictum eget nunc semper ultrices.</p>
+					<p>Maecenas vehicula sapien mi, eget porta nunc pharetra sit amet. Maecenas dictum aliquet mi in egestas. Duis quis tellus ultricies, posuere odio cursus, tincidunt purus. Morbi vulputate luctus est, eget semper nibh consectetur sit amet.</p>
 				</div>
 			</div>
 		</div>
